добавила svg с правильным названием

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1677,7 +1677,7 @@ body {
   position: absolute;
   top: 6px;
   left: 4px;
-  background-image: url(../images/Vector-chek.svg);
+  background-image: url(../images/vector-chek.svg);
   background-repeat: no-repeat;
   content: "";
   width: 12px;
