--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,7 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
-  min-width: 300px;
+  max-width: 300px;
   justify-content: flex-end;
   flex-wrap: wrap;
 }
